@startuml
'https://plantuml.com/class-diagram

abstract class Payment {
	Name
	Amount
	Date
	Picture
	Tag
	Payer
	Payee
	Project
}
class Expense {
}
class Income {
}
class Transfer {
}

class Tag {
    Name
}

class Project {
    Name
    Description
}

class User {
    Name
    Password
    Role
}
class Admin {
}




Payment <|-- Transfer
Payment <|-- Income
Payment <|-- Expense

User <|-- Admin

Project *-- "0..*" Payment
Project "0..*" -- "0..*" User
Tag "0..1" -- Payment


Payment "Payer" -- "1" User
Payment "Payee" -- "1..*" User

@enduml